--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,24 +22,19 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Write Docker image name to file
-        run: echo "IMAGE_NAME=${{ secrets.DOCKER_USERNAME }}/pocketbase" > .docker_image_name
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ secrets.IMAGE_VERSION }} .
 
-      - name: Read Docker image name from file
-        id: read_image_name
-        run: echo "IMAGE_NAME=$(cat .docker_image_name | cut -d'=' -f2)" >> $GITHUB_ENV
-
-      - name: Build Docker images
+      - name: Tag Docker image with latest tag
         run: |
-          docker build -t $IMAGE_NAME-${{ secrets.IMAGE_VERSION }}:${{ secrets.IMAGE_VERSION }} .
-          docker build -t $IMAGE_NAME:latest .
+          docker tag ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ secrets.IMAGE_VERSION }} ${{ secrets.DOCKER_USERNAME }}/pocketbase:latest
 
-      - name: Test Docker images
+      - name: Test Docker image
         run: |
-          docker run --rm $IMAGE_NAME-${{ secrets.IMAGE_VERSION }}:${{ secrets.IMAGE_VERSION }} /pb/pb-test.sh
-          docker run --rm $IMAGE_NAME:latest /pb/pb-test.sh
+          docker run --rm ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ secrets.IMAGE_VERSION }} /pb/pb-test.sh
+          docker run --rm ${{ secrets.DOCKER_USERNAME }}/pocketbase:latest /pb/pb-test.sh
 
       - name: Push Docker images
         run: |
-          docker push $IMAGE_NAME-${{ secrets.IMAGE_VERSION }}:${{ secrets.IMAGE_VERSION }}
-          docker push $IMAGE_NAME:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ secrets.IMAGE_VERSION }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/pocketbase:latest
