--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -22,19 +22,16 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ secrets.IMAGE_VERSION }} .
-
-      - name: Tag Docker image with latest tag
+      - name: Build and Tag Docker image
         run: |
-          docker tag ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ secrets.IMAGE_VERSION }} ${{ secrets.DOCKER_USERNAME }}/pocketbase:latest
+          docker buildx build --tag pk/pocketbase:${{ secrets.IMAGE_VERSION }} --tag pk/pocketbase:latest .
 
       - name: Test Docker image
         run: |
-          docker run --rm ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ secrets.IMAGE_VERSION }} /pb/pb-test.sh
-          docker run --rm ${{ secrets.DOCKER_USERNAME }}/pocketbase:latest /pb/pb-test.sh
+          docker run --rm pk/pocketbase:${{ secrets.IMAGE_VERSION }} /pb/pb-test.sh
+          docker run --rm pk/pocketbase:latest /pb/pb-test.sh
 
       - name: Push Docker images
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ secrets.IMAGE_VERSION }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/pocketbase:latest
+          docker push pk/pocketbase:${{ secrets.IMAGE_VERSION }}
+          docker push pk/pocketbase:latest
