--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
-name: CI/CD for Docker
+name: CI for Docker
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      IMAGE_VERSION:
+        description: "Version for the Docker image"
+        required: true
+        type: string
 
 jobs:
   build:
@@ -11,30 +14,30 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v5
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ secrets.IMAGE_VERSION }} .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ github.event.inputs.IMAGE_VERSION }} .
 
       - name: Tag Docker image with latest tag
         run: |
-          docker tag ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ secrets.IMAGE_VERSION }} ${{ secrets.DOCKER_USERNAME }}/pocketbase:latest
+          docker tag ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ github.event.inputs.IMAGE_VERSION }} ${{ secrets.DOCKER_USERNAME }}/pocketbase:latest
 
       - name: Test Docker image
         run: |
-          docker run --rm ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ secrets.IMAGE_VERSION }} /pb/pb-test.sh
-          docker run --rm ${{ secrets.DOCKER_USERNAME }}/pocketbase:latest /pb/pb-test.sh
+          docker run --rm --name pocketbase -p 127.0.0.1:8910:8080 ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ github.event.inputs.IMAGE_VERSION }}
+          sh pb-test.sh
 
-      - name: Push Docker images
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ secrets.IMAGE_VERSION }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/pocketbase:latest
+      # - name: Push Docker images
+      #   run: |
+      #     docker push ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ github.event.inputs.IMAGE_VERSION }}
+      #     docker push ${{ secrets.DOCKER_USERNAME }}/pocketbase:latest
