--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           docker run -itd --rm --name pocketbase -p 127.0.0.1:8910:8080 ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ github.event.inputs.IMAGE_VERSION }}
           sh pb-test.sh
 
-      # - name: Push Docker images
-      #   run: |
-      #     docker push ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ github.event.inputs.IMAGE_VERSION }}
-      #     docker push ${{ secrets.DOCKER_USERNAME }}/pocketbase:latest
+      - name: Push Docker images
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/pocketbase:${{ github.event.inputs.IMAGE_VERSION }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/pocketbase:latest
